Fixes in the design, and the hover div in workBx remains to be done

--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,10 @@ header ul li a {
     margin-bottom: 10px;
 }
 
+.imgLink {
+    cursor: pointer;
+}
+
 .w50 {
     min-width: 50%;
 }
@@ -212,19 +216,42 @@ img {
 
 .work .content {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
 .work .content .workBx {
-    width: 50%;
-    padding: 20px;
+    width: 35%;
+    /* padding: 10px; */
+    margin: 5px;
     text-align: center;
+    position: relative;
 }
 
 .work .content .workBx img {
-    max-width: 85%;
+    max-width: 100%;
 }
+.work .content .workBx .divHover {
+    background-color: #000;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    padding-bottom: 0;
+    top: 0;
+    opacity: 1;
+}
+.work .content .workBx .divHover h2 {
+    color: whitesmoke;
+    z-index: 1;
+}
+.work .content .workBx .divHover div h2 {
+    color: whitesmoke;
+    z-index: 1;
+}
+
+
 
 .testimonial {
     background: #f7f7f7;
@@ -314,16 +341,21 @@ img {
  }
 
  .contactInfo {
-     min-width: 40%;
+     min-width:100%;
+     text-align: center;
  }
 
  .contactInfoBx {
-     position: relative;
+     /* position: relative; */
+     display: flex;
+     justify-content: center;
+     
  }
 
  .contactInfoBx .box {
      position: relative;
      padding: 20px 0;
+     margin: 5px 20px;
      display: flex;
  }
 
